<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Party</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_email" translatable="false">Email</string>
    <string name="action_password">Password</string>
    <string name="action_username">Username</string>
    <string name="login">Login</string>
    <string name="forgot_your_password">Forgot your password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="full_name">Full Name</string>
    <string name="register">Register</string>
    <string name="logout">Logout</string>
    <string name="description">Description</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="update">Update</string>
    <string name="user_name">User Name</string>
    <string name="delete">Delete</string>
    <string name="change_password">Change Password</string>
    <string name="profile_change_password">Change\nPassword</string>
    <string name="upload_avatar">Upload Avatar</string>
    <string name="email_not_valid">Email not valid</string>
    <string name="action_phone_number">Phone Number</string>
    <string name="create_account">Create account</string>
    <string name="this_field_required">This field required</string>
    <string name="this_field_cannot_contain_space">This field cannot contain spcae</string>
    <string name="password_too_short">Password too short</string>
    <string name="phone_not_valid">Phone number not valid</string>
    <string name="not_matched_with_password">Not matched with password</string>

    <string name="icon_search_title">Search</string>
    <string name="action_current_password">Current Password</string>
    <string name="action_new_password">New Password</string>
    <string name="action_confirm_password">Confirm Password</string>
    <string name="action_next">Next</string>
    <string name="wrong_password">Wrong Password</string>
    <string name="menu_home">Home</string>

    <string name="nav_header_title">ducluanxutrieu</string>
    <string name="nav_header_subtitle">Trần Đức Luân</string>
    <string name="user_profile">Profile</string>
    <string name="version">Version</string>
    <string name="cannot_logout">Cannot logout - Please check your internet</string>
    <string name="profile_detail">Profile Detail</string>
    <string name="sex">Sex </string>
    <string name="sex_male">Male</string>
    <string name="sex_female">Female</string>
    <string name="birthday">Birthday</string>
    <string name="mobile">Mobile</string>
    <string name="email">Email</string>
    <string name="toolbar_edit_profile">Edit Profile</string>
    <string name="update_profile_success">Update profile successful</string>
    <string name="your_ordered">My Ordered</string>
    <string name="address">Address</string>
    <string name="about_us">About Us</string>
    <string name="dish_title">Dish Title</string>
    <string name="dish_description">Dish Description</string>
    <string name="add_more_image">Add more image for this dish</string>
    <string name="add_dish">Add Dish</string>
    <string name="price">Price: </string>
    <string name="_0">0</string>
    <string name="vnd">VND</string>
    <string name="type">Type</string>
    <string name="holiday_offers">Holiday Offers</string>
    <string name="first_dishes">First Dishes</string>
    <string name="main_dishes">Main Dishes</string>
    <string name="seafood">Seafood</string>
    <string name="drinks">Drinks</string>
    <string name="dessert">Dessert</string>
    <string name="your_cart">Your Cart</string>
    <string name="cart_detail">Cart Detail</string>
    <string name="_1">1</string>
    <string name="dish_name">Dish Name</string>
    <string name="total">Total Price: </string>
    <string name="order_now">Order Now</string>
    <string name="dishes_price">Price</string>
    <string name="dish_detail">Dish Detail</string>
    <string name="dish_model">DISH_MODEL</string>
    <string name="home">Home</string>
    <string name="toolbar_change_password">Change Password</string>
    <string name="list_dish_selected_key">LIST_DISH_SELECTED</string>
    <string name="our_address">Our Address</string>
    <string name="default_address">Nhà AG4, KTX khu A mở rộng, ĐHQG TPHCM</string>
    <string name="our_address_">Our Address:</string>
    <string name="tran_duc_luan">Tran Duc Luan</string>
    <string name="mssv_luan">16520704</string>
    <string name="nguyen_tan_hao">Nguyen Tan Hao</string>
    <string name="nguyen_ngoc_quang_dong">Nguyen Ngoc Quang Dong</string>
    <string name="tran_duc_trung">Tran Duc Trung</string>
    <string name="_class">Class</string>
    <string name="class_id">MMTT2016</string>
    <string name="schoolmaster">Schoolmaster</string>
    <string name="mr_thai_huy_tan">Mr: Thai Huy Tan</string>
    <string name="subjects_id">Subjects ID</string>
    <string name="subjects">NT117.K11</string>
    <string name="description_content">Đây là một ứng dụng được nhóm xây dựng trong khuôn khổ môn học Báo cáo đồ án lập trình ứng dụng mạng với sự hướng dẩn của thầy Thái Huy Tân.   Đây là một ứng dụng đặt tiệc cho những buổi tiệc nhỏ, ít người nhăm mang lại cảm giác ấm cúng bên bàn tiệc và cũng để phục vụ tốt hơn cho thực khách</string>
    <string name="communicate">Communicate</string>
    <string name="login_error">Login Error</string>
    <string name="login_successful">Login Successful</string>
    <string name="register_successful">Register success</string>
    <string name="birthday_greater_than_now_day">Birthday need greater than now day</string>
    <string name="reset_password">Reset Password</string>
    <string name="cancel" tools:ignore="PrivateResource">Cancel</string>
    <string name="code_from_your_email">Code From Your Email</string>
    <string name="number_of_table">Number of Tables</string>
    <string name="date_booking_must_greater_than_day_now">Date party must greater than day now</string>
    <string name="date_party">Date Party</string>
    <string name="reservation_completed_successfully">Reservation completed successfully</string>
    <string name="your_reservation_with_a_mechanic_was_successful_nwe_will_process_payment_after_the_work_is_completed">Your reservation with a mechanic was successful. We will process payment after the work is completed.</string>
    <string name="an_email_confirmation_will_be_sent_to_you_shortly_with_your_order_detail">An email confirmation will be sent to you shortly with your order detail.</string>
    <string name="back_to_menu">Back to Menu</string>
    <string name="reservation_success">Reservation Success</string>
    <string name="edit_dish">Edit Dish</string>
    <string name="update_dish_false">Update dish false</string>
    <string name="update_dish">Update Dish</string>
    <string name="delete_dish">Delete Dish</string>
    <string name="alert_delete_dish">Are you sure you want to delete this dish? After deletion cannot be restored</string>
    <string name="write_your_review_here">Write your review here</string>
    <string name="submit">Submit</string>
    <string name="description_sample">Món nem cua bể rất thích hợp cho những buổi hội họp gia đình và bạn bè vào cuối tuần hay các dịp nghỉ lễ. Nem cua bể mang hương vị ấn tượng đến từ thịt của cộng vị chua ngọt của nước chấm, màu sắc tươi tắn và vị giòn ngon của bánh đa, tất cả cùng hòa quyện vào nhau tạo nên món ăn rất độc đáo.</string>
    <string name="list_rated">List rated</string>
    <string name="rating">Rating</string>
    <string name="history_booking">History Booking</string>
    <string name="time_party">Time Party</string>
    <string name="list_dishes">List Dishes</string>
    <string name="number_of_dishes">Number of Dishes</string>
    <string name="amount">Amount</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="user_name_too_short">Username too short</string>
    <string name="full_name_too_short">Full name too short</string>
    <string name="phone_number_too_short">Phone number too short</string>
    <string name="title_activity_maps">Map</string>
    <string name="review">Review</string>
    <string name="review_this_dish">Review this dish</string>
    <string name="retry">Retry</string>
    <string name="number_customer">Number Customer</string>
    <string name="_50">50</string>
    <string name="_5">5</string>
    <string name="discount_code">Discount Code</string>
    <string name="payment">Payment</string>
    <string name="customer">Customer:</string>
    <string name="total_bill">Total Bill</string>
    <string name="zero_dollar">$0</string>
    <string name="complete_order">Complete Order</string>
    <string name="complete_payment">Complete Payment</string>
</resources>
