<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/toolbar_edit_dish"
        android:icon="@drawable/ic_edit_black_24dp"
        android:title="@string/edit_dish"
        app:showAsAction="ifRoom"
        tools:ignore="PrivateResource" />

    <item
        android:id="@+id/toolbar_delete_dish"
        android:icon="@drawable/ic_delete_forever"
        android:title="@string/delete_dish"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/toolbar_add_to_cart"
        android:icon="@drawable/ic_add_dish_cart_24dp"
        android:title="@string/add_to_cart"
        app:showAsAction="always"
        tools:ignore="UnusedAttribute" />
</menu>