<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhile"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="4">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_100sdp"
                    android:padding="@dimen/_2sdp"
                    app:srcCompat="@drawable/avatar_luan" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/museo_sans_cyrl"
                    android:gravity="center"
                    android:text="@string/tran_duc_luan" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/museo_sans_cyrl"
                    android:gravity="center"
                    android:text="@string/mssv_luan" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_100sdp"
                    android:padding="@dimen/_2sdp"
                    app:srcCompat="@drawable/avatar_trung" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/museo_sans_cyrl"
                    android:gravity="center"
                    android:text="@string/tran_duc_trung" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:fontFamily="@font/museo_sans_cyrl"
                    android:text="@string/mssv_luan" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_100sdp"
                    android:padding="@dimen/_2sdp"
                    app:srcCompat="@drawable/avatar_hao" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/museo_sans_cyrl"
                    android:gravity="center"
                    android:text="@string/nguyen_tan_hao" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/museo_sans_cyrl"
                    android:text="@string/mssv_luan" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_100sdp"
                    android:padding="@dimen/_2sdp"
                    app:srcCompat="@drawable/avatar_dong" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/museo_sans_cyrl"
                    android:gravity="center"
                    android:text="@string/nguyen_ngoc_quang_dong" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/museo_sans_cyrl"
                    android:text="@string/mssv_luan" />
            </LinearLayout>
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_10sdp">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_15sdp"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/TextViewTitle"
                    android:text="@string/_class" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_username"
                    style="@style/TextViewContent"
                    android:text="@string/class_id" />

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/TextViewTitle"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:text="@string/schoolmaster" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_email"
                    style="@style/TextViewContent"
                    android:text="@string/mr_thai_huy_tan" />

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/TextViewTitle"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:text="@string/subjects_id" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_mobile"
                    style="@style/TextViewContent"
                    android:text="@string/subjects" />

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/TextViewTitle"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:text="@string/description" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_sex"
                    style="@style/TextViewContent"
                    android:paddingBottom="@dimen/_12sdp"
                    android:text="@string/description_content"
                    android:textColor="@color/colorPrimaryDark" />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </ScrollView>
    </LinearLayout>
</layout>