<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/reveal_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:background="@drawable/dialog_bg"
    android:padding="@dimen/_10sdp"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="center_horizontal"
        android:text="@string/review_this_dish"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/_15sdp"
        android:textStyle="italic|bold" />

    <androidx.appcompat.widget.AppCompatRatingBar
        android:id="@+id/rating_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layerType="hardware"
        android:numStars="5"
        tools:rating="5" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        app:boxCornerRadiusTopStart="@dimen/_5sdp"
        app:boxCornerRadiusTopEnd="@dimen/_5sdp"
        app:boxCornerRadiusBottomEnd="@dimen/_5sdp"
        app:boxCornerRadiusBottomStart="@dimen/_5sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_content_review"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/write_your_review_here" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/ll_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal">


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_cancel"
            style="@style/MaterialButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="@dimen/_5sdp"
            android:text="@string/cancel"
            app:backgroundTint="@android:color/darker_gray" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_submit"
            style="@style/MaterialButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="@dimen/_5sdp"
            android:text="@string/submit" />
    </LinearLayout>
</LinearLayout>