<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_5sdp"
        android:orientation="vertical"
        style="@style/clickableCard">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/time_party"
                android:textSize="@dimen/_14sdp"
                android:fontFamily="@font/museo_sans_cyrl"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_time_booking"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                tools:text="30/12/2019 12:55"
                tools:ignore="RelativeOverlap"
                android:textSize="@dimen/_14sdp"
                android:fontFamily="@font/museo_sans_cyrl"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_2sdp">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/number_of_table"
                android:textSize="@dimen/_14sdp"
                android:fontFamily="@font/museo_sans_cyrl"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_number_table_booking"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                tools:text="2"
                tools:ignore="RelativeOverlap"
                android:textSize="@dimen/_14sdp"
                android:fontFamily="@font/museo_sans_cyrl"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_2sdp">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dishes_price"
                android:textSize="@dimen/_14sdp"
                android:fontFamily="@font/museo_sans_cyrl"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_total_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                tools:text="150000VND"
                tools:ignore="RelativeOverlap"
                android:textSize="@dimen/_14sdp"
                android:fontFamily="@font/museo_sans_cyrl"/>
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/ll_list_dishes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/_5sdp"
            android:visibility="gone">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/list_dishes"
                android:textSize="@dimen/_14sdp"
                android:fontFamily="@font/museo_sans_cyrl"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_list_dishes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimary"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            />
    </LinearLayout>
</layout>